<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美盟</string>
    <string name="s_search">搜索</string>
    <string name="s_doing">活动</string>
    <string name="vip_member">会员</string>
    <string name="s_recommend">推荐</string>
    <string name="s_message">传情</string>
    <string name="s_vip">尊享</string>
    <string name="s_search_city">城市搜索</string>
    <string name="s_search_id">ID搜索</string>
    <string name="s_search_name">昵称搜索</string>
    <string name="reg_submit">提交</string>
    <string name="reg_phone">手机号</string>
    <string name="reg_honey">昵称</string>
    <string name="reg_pwd">密码</string>
    <string name="pull_item_gallery">从相册选取</string>
    <string name="pull_item_camera">从照相机选取</string>
    <string name="pull_item_cancel">取消</string>
    <string name="pull_item_title">选择照片</string>
    <string name="edit_title">上传照片</string>
    <string name="edit_item_1">删除照片</string>
    <string name="edit_item_2">相册</string>
    <string name="edit_item_3">拍照</string>
    <string name="edit_item_4">取消</string>
    <string name="voice_cell_delete">删除</string>
    <string name="voice_cell_record">录音</string>
    <!--
    <string name="xlistview_footer_hint_normal">加载更多数据</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    -->
    <string name="xlistview_footer_hint_over">数据加载完成</string>
    <string name="release_refresh">松开刷新</string>
    <string name="pullup_refresh">上拉刷新</string>
    <string name="pulldown_refresh">下拉刷新</string>
    <string name="last_modified">上次更新</string>
    <string name="recently_modified">最近更新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="vip_dial_tel">400-8783-520</string>

</resources>